tests/snapshots/options__opt_info_right@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --info right"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"                                                                        3/3  0/0"
">                                                                               "
cursor: (24, 3)
