tests/snapshots/options__opt_min_query_length@001.snap
---
source: tests/options.rs
description: "input: items [\"line1\", \"line2\", \"line3\"]\noptions: --min-query-length 3 --info hidden"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
cursor: (25, 3)
