tests/snapshots/options__opt_min_query_length@002.snap
---
source: tests/options.rs
description: "input: items [\"line1\", \"line2\", \"line3\"]\noptions: --min-query-length 3 --info hidden\nafter:\n  @type \"li\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> li                                                                            "
cursor: (25, 5)
