tests/snapshots/options__opt_min_query_length@003.snap
---
source: tests/options.rs
description: "input: items [\"line1\", \"line2\", \"line3\"]\noptions: --min-query-length 3 --info hidden\nafter:\n  @char 'n'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  line3                                                                         "
"  line2                                                                         "
"> line1                                                                         "
"> lin                                                                           "
cursor: (25, 6)
